--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Shiro-md",
+    "name": "Rian-Ganz",
     "version": "3.5.4",
     "description": "Simple Bot WhatsApp",
     "depecrated": false,
