--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "ShiraoriBOT-Md",
+  "name": "rianbotz",
   "description": "Lightweight WhatsApp Bot",
   "repository": "https://github.com/ilmanhdyt/ShiraoriBOT-Md",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
