--- a/package.json
+++ b/package.json
@@ -37,13 +37,15 @@
     "license": "GPL-3.0-or-later",
     "dependencies": {
         "@adiwajshing/baileys": "^4.1.0",
+        "@bochilteam/scraper": "^0.0.5",
         "awesome-phonenumber": "^2.64.0",
         "axios": "^0.24.0",
-        "@bochilteam/scraper": "^0.0.5",
         "cfonts": "^2.10.0",
         "chalk": "^4.1.2",
         "cheerio": "^1.0.0-rc.10",
         "colors": "1.4.0",
+        "ejs": "^3.1.8",
+        "express": "^4.18.1",
         "file-type": "^16.5.3",
         "form-data": "^4.0.0",
         "g-i-s": "^2.1.6",
@@ -53,8 +55,8 @@
         "jsdom": "^18.1.1",
         "lodash": "^4.17.21",
         "lowdb": "^2.1.0",
-        "mongoose": "^6.0.14",
         "moment-timezone": "^0.5.34",
+        "mongoose": "^6.0.14",
         "node-fetch": "^2.6.6",
         "node-gtts": "2.0.2",
         "node-webpmux": "^3.1.0",
