--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "ShiraoriBOT-Md",
+  "name": "HYZERBOT-MD",
   "description": "Lightweight WhatsApp Bot",
-  "repository": "https://github.com/ilmanhdyt/ShiraoriBOT-Md",
+  "repository": "https://github.com/Hyzerr/Hyzer-MD",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
   "keywords": [
     "bot",
