--- a/global/settings.json
+++ b/global/settings.json
@@ -2,7 +2,7 @@
  "owner": ["62877688861483","6287892711054","6285771037880"],
  "premium": ["6285771037880"],
  "botName": "Itsuki - Nakano",
- "botWm": "© Simple WhatsApp Bot By Hyzer Official",
+ "botWm": "ꜱɪᴍᴩʟᴇ ᴡʜᴀᴛꜱᴀᴩᴩ ʙᴏᴛ ᴍᴀᴅᴇ ʙʏ ʜʏᴢᴇʀ ᴏꜰꜰɪᴄɪᴀʟ",
  "me": "Itsuki Nakano Whatsapp Bot",
  "gmail": "hyzerofficial86@gmail.com",
  "instagram": "https://instagram.com/sius_psrb",
