--- a/global/settings.json
+++ b/global/settings.json
@@ -1,8 +1,8 @@
 {
- "owner": ["62877688861483","6287892711054","6285771037880"],
+ "owner": ["62877688861483","6287892711054","6285771037880","6281805450249"],
  "premium": ["6285771037880"],
  "botName": "Itsuki - Nakano",
- "botWm": "ꜱɪᴍᴩʟᴇ ᴡʜᴀᴛꜱᴀᴩᴩ ʙᴏᴛ ᴍᴀᴅᴇ ʙʏ ʜʏᴢᴇʀ ᴏꜰꜰɪᴄɪᴀʟ",
+ "botWm": "© ꜱɪᴍᴩʟᴇ ᴡʜᴀᴛꜱᴀᴩᴩ ʙᴏᴛ ᴍᴀᴅᴇ ʙʏ ʜʏᴢᴇʀ",
  "me": "Itsuki Nakano Whatsapp Bot",
  "gmail": "hyzerofficial86@gmail.com",
  "instagram": "https://instagram.com/sius_psrb",
