--- a/global/settings.json
+++ b/global/settings.json
@@ -1,21 +1,27 @@
-{
- "owner": ["62877688861483","6287892711054","6285771037880","6281805450249"],
- "premium": ["6285771037880"],
- "botName": "Itsuki - Nakano",
- "botWm": "© ꜱɪᴍᴩʟᴇ ᴡʜᴀᴛꜱᴀᴩᴩ ʙᴏᴛ ᴍᴀᴅᴇ ʙʏ ʜʏᴢᴇʀ",
- "me": "Itsuki Nakano Whatsapp Bot",
- "gmail": "hyzerofficial86@gmail.com",
- "instagram": "https://instagram.com/sius_psrb",
- "stickerpack": "WhatsApp Bot",
- "groupBot": "https://chat.whatsapp.com/IxBejqgYlXKENKPJsF7EOP",
- "logo": "乂",
- "liner": "◦",
+{ 
+ "owner": {
+   "number": ["62877688861483","6287892711054","6285771037880","6281805450249"],
+   "instagram": "https://instagram.com/sius_psrb",
+   "gmail": "hyzerofficial86@gmail.com"
+   "web": "https://bit.ly/hyzerdev"
+ },       
+ "bot": {
+   "name": "ITSUKIBOT",
+   "premium": ["6285771037880"],
+   "about": "Itsuki Nakano Whatsapp Bot",
+   "source": "https://github.com/Hyzerr/Hyzer-MD",
+   "footer": "_© Simple WhatsApp Bot By Hyzer Official _"
+ }
  "sticker": {
-   "packname": "Sticker From",
+   "packname": "Made By",
    "author": "Itsuki Nakano Bot"
  },
  "image": {
    "menu": "https://telegra.ph/file/4d00acf1238238cd12c17.jpg",
    "logo": "https://telegra.ph/file/803922ea6af1f187e14a8.jpg"
+ },
+ "group": {
+   "link": "https://chat.whatsapp.com/IxBejqgYlXKENKPJsF7EOP",
+   "id": "120363023934136490@g.us"
  }
 }
