--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "HYZERBOT-MD",
+  "name": "HYZERDEV-BOT",
   "description": "Lightweight WhatsApp Bot",
   "repository": "https://github.com/Hyzerr/Hyzer-MD",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
