--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "WHATSAPP-BOT V4",
-    "version": "4.0.0",
+    "name": "HYZEROFFICIAL-BOTMD",
+    "version": "1.0.0",
     "description": "Simple Bot WhatsApp",
     "depecrated": false,
     "main": "index.js",
