--- a/global/settings.json
+++ b/global/settings.json
@@ -2,7 +2,7 @@
  "owner": {
    "number": ["62877688861483","6287892711054","6285771037880","6281805450249"],
    "instagram": "https://instagram.com/sius_psrb",
-   "gmail": "hyzerofficial86@gmail.com"
+   "gmail": "hyzerofficial86@gmail.com",
    "web": "https://bit.ly/hyzerdev"
  },       
  "bot": {
