--- a/global/settings.json
+++ b/global/settings.json
@@ -3,7 +3,7 @@
    "number": ["62877688861483","6287892711054","6285771037880","6281805450249"],
    "instagram": "https://instagram.com/sius_psrb",
    "gmail": "hyzerofficial86@gmail.com",
-   "web": "https://bit.ly/hyzerdev"
+   "web": "https://github.com/Hyzerr"
  },       
  "bot": {
    "name": "ITSUKIBOT",
