--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
         "cfonts": "^2.10.0",
         "chalk": "^4.1.2",
         "cheerio": "^1.0.0-rc.10",
-        "colors": "1.4.0",
+        "colors": "^1.4.0",
+        "delay": "^5.0.0",
         "dhn-api": "^1.1.3",
         "emoji-api": "^2.0.1",
         "express": "^4.17.3",
