--- a/global/settings.json
+++ b/global/settings.json
@@ -1,6 +1,6 @@
 { 
  "owner": {
-   "number": ["6285771037880,"0"],
+   "number": ["6285771037880","0"],
    "instagram": "https://instagram.com/sius_psrb",
    "gmail": "hyzerofficial86@gmail.com",
    "web": "https://github.com/Hyzerr"
