--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@bochilteam/scraper": "^2.0.0",
         "awesome-phonenumber": "^2.69.0",
         "axios": "^0.26.0",
+        "baileys": "^6.0.5",
         "caliph-api": "github:caliphdev/caliph-api",
         "catch": "^1.0.48",
         "cfonts": "^2.10.0",
